refactor(volume): 卷提升为栈级独立资源，服务按引用挂载
- 数据模型: t_volume 改栈级（service_id 置空保留，uk 改为 stack_id+volume_name）；
  新增 t_service_volume 服务-卷引用表
- 卷 API: 创建/列表不再需要 serviceId；删除为物理删除并同步清理引用；栈内卷名唯一校验
- 服务: CreateServiceDto/UpdateServiceDto 新增 volumeIds（创建绑定、更新全量替换）；
  服务删除只清理引用不删卷；服务列表 volumes 经引用表关联填充
- 运行时: Docker named volume 命名改为 stack 级共享（vanilla-{stackId}-{volumeName}）；
  K8s PVC 名 = 卷名（栈内唯一、可多服务共享挂载）
- 前端: StackDetail 新增「卷管理」tab（栈级卷 CRUD），服务表单改「引用卷」多选，
  服务展开区卷改为只读引用展示
- 存量库迁移脚本 + docs 更新
- 真机验证: 独立建卷→服务引用→部署 PVC=卷名→删服务卷/PVC 保留→重建服务复用同一 PVC→删卷级联清引用
- 51 测试全绿